feat(js): product endpoints
